fixed issue on mobile devices

--- a/app/css/morecards.css
+++ b/app/css/morecards.css
@@ -117,8 +117,9 @@
 
   /* Reset the width and margin for one box per row */
   .box {
-    width: 100%;
+    width: 70%;
     margin-right: 0;
-    margin-bottom: 20px; /* Add vertical spacing between boxes */
+    margin-bottom: 20px;
+    margin-left: 10px; /* Add vertical spacing between boxes */
   }
 }
